# truefa-py

./: .dockerignore  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CRYPTO.md  Dockerfile  Dockerfile.windows  FinalSpec.spec  README.md  SECURITY.md  TrueFA.spec  TrueFA_OpenCV.spec  TrueFA_Py.spec  TrueFA_installer.spec  TrueFA_simple.spec  _build_env.py  build_exe.py  build_module.py  build_package.py  build_rust.py  clean_truefa.py  cleanup_vault.py  create_test_qr.py  docker-entrypoint.sh  install.bat  installer.nsi  main.py  main_opencv.py  main_simple.py  package_release.bat  requirements-gui.txt  requirements.txt  run_docker.ps1  run_docker_persistent.ps1  run_manual_test.bat  run_test.bat  secure_build_fix.py  setup.py  test_create_vault.py  test_create_vault_complete.py  (+10 more)
TrueFA-Py-VM-Test/: README.md  TrueFA-Py-Launcher.bat  TrueFA-Py.bat  install_dependencies.ps1  setup.bat  windows_compatibility_check.ps1
dev-tools/: README.md  analyze_container_logs.py  build.ps1  build_package.py  clean_truefa.py  create_test_qr.py  dev-requirements.txt  reset_and_test.py  setup.py
docker/: Dockerfile  docker-entrypoint.sh  run_docker.ps1  run_docker_persistent.ps1
docs/: BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STATUS.md  FAQ.md  QUICK_START.md  README.md  RUST_INTEGRATION.md  SECURITY.md  SECURITY_CRYPTO.md  SECURITY_GUIDE.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  USER_GUIDE.md  WINDOWS_TESTING.md
rust_crypto/: Cargo.toml  build.rs
rust_crypto/src/: lib.rs
src/: __init__.py  config.py  main.py  main_opencv.py
truefa/: __init__.py
(+78 files in other folders)
