[package]
name = "truefa_crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "truefa_crypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3-py37"] }
aes-gcm = "0.10.1"
argon2 = "0.4.1"
scrypt = "0.10.0"
base64 = "0.13.0"
rand = "0.8.5"
zeroize = "1.5.7"
sha2 = "0.10.6"
once_cell = "1.17.0"
